--- a/test_manus/test_manus.tex
+++ b/test_manus/test_manus.tex
@@ -387,7 +387,8 @@ regimes, while RF dominates in harvesting pulp timber
 \centering
 \includegraphics{test_manus_files/figure-latex/fig_4_plot_V_timber-1.pdf}
 \caption{A. Mean standing and B. harvested pulp and log timber under
-three types of management regimes over harvest intensity gradient}
+three types of management regimes over harvest intensity gradient.
+Please note the range of y axis}
 \end{figure}
 
 The intensification of the harvesting levels increases the proportion of
@@ -400,6 +401,12 @@ total standing volume See figure
 @ref(fig\_5\_proportion\_V\_pulp\_log).
 
 \subsubsection{Changes in wind risk}\label{changes-in-wind-risk}
+
+\begin{figure}
+\centering
+\includegraphics{test_manus_files/figure-latex/fig_windRisk_time_change-1.pdf}
+\caption{Temporal changes in wind risk over time}
+\end{figure}
 
 \subsection{Dynamic parameters contributing to wind
 risk}\label{dynamic-parameters-contributing-to-wind-risk}
